--- a/manifest.yml
+++ b/manifest.yml
@@ -1,12 +1,14 @@
 applications:
   - path: .
-    memory: 128M
+    memory: 512M
     instances: 1
     domain: mybluemix.net
     name: nometemporarioangelhack
     host: nometemporarioangelhack
     disk_quota: 1024M
     buildpack: python_buildpack
+    timeout: 180
+    maximum_health_check_timeout: 180
     services:
       - mysql-prod
     env:
